# multi-agents-terminal

./: CLAUDE.md  DESIGN.md  LICENSE  README.md  package-lock.json  package.json
.claude/: launch.json  settings.json
server/: index.js
server/routes/: hooks.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hook_server.rs  lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  git_commands.rs  mod.rs  project_commands.rs  pty_commands.rs  usage_commands.rs
src-tauri/src/pty/: manager.rs  mod.rs  reader.rs  session.rs
src-tauri/src/shell/: zshrc.zsh
src-tauri/src/state/: app_state.rs
src/components/Automation/: AutomationForm.tsx  AutomationList.tsx  AutomationLogList.tsx  AutomationPanel.tsx
src/components/BottomPanel/: BottomPanel.tsx
src/components/Editor/: CodeEditor.tsx  EditorPane.tsx  EditorTab.tsx  FullscreenFileModal.tsx  ImageViewer.tsx  RenderedPreview.tsx
src/components/FileExplorer/: ContextMenu.tsx  FileExplorer.tsx  FileTree.tsx  FileTreeNode.tsx  MoveConfirmModal.tsx
src/components/Git/: GitAddRemoteModal.tsx  GitAuthModal.tsx  (+7 more)
src/hooks/: useAutomationScheduler.ts  useExternalFileDrop.ts  useFileWatcher.ts  useHookEvents.ts  useProjectPersistence.ts  usePty.ts  useSessionPersistence.ts  useTheme.ts
src/lib/: claudeHooks.ts  externalDrop.ts  fileDrag.ts  fileIcons.tsx  hotkeys.ts  languageDetect.ts  ptyManager.ts  tauri.ts  themes.ts
src/store/: useAutomationStore.ts  useStore.ts
src/types/: automation.ts
(+21 files in other folders)
