[package]
name = "multi-agents-terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["Maxim Puda"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "multi_agents_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs-next = "2"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "macros"] }
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

